--- a/content/assets/css/application.scss
+++ b/content/assets/css/application.scss
@@ -408,7 +408,6 @@ hr.section-break--thin {
 }
 
 .govuk-footer {
-  margin-top: govuk-spacing(9);
   p,
   a {
     font-size: 1rem;
